# tropix

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_arithmetic.py  test_conic.py  test_dual.py  test_newton.py  test_polynomial.py
tropix/: __init__.py  arithmetic.py  dual.py  newton.py  polynomial.py  subdivision.py  visualisation.py
