[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tropix"
version = "0.1.0"
description = "A Python library for tropical geometry computation, exploring the connection between ReLU neural networks and tropical rational maps."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]

authors = [
    { name = "Ahmad Rawn" }
]

keywords = [
    "tropical geometry",
    "algebraic geometry",
    "computational geometry",
    "neural networks",
    "mathematics",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/amdrwn/tropix"
Repository = "https://github.com/amdrwn/tropix"
Issues = "https://github.com/amdrwn/tropix/issues"

[tool.setuptools.packages.find]
include = ["tropix*"]
